--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -10,6 +10,7 @@ h1 {
 .sheet-header-h1 {
   font-family: "Times New Roman", Times, serif;
   font-size: 1.25em;
+  font-weight: bold;
   color: #000;
   letter-spacing: 0.0625em;
   z-index: 0;
@@ -983,20 +984,171 @@ input.sheet-conditions-cold:checked ~ div > span.sheet-conditions-cold {
 .sheet-weapons-box11 {
   grid-column-start: 1;
 }
+
 /* ---------------------------------- Dice Pool */
+
+.sheet-dice-header { grid-area: sheet-dice-header; }
 
 .sheet-dice_pool-grid {
   display: grid;
-  grid-template-columns: 6em 7em 6em;
-  grid-template-rows: auto;
-  grid-column-gap: 2px;
-  grid-row-gap: 2px;
-  padding-bottom: 5px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: "sheet-dice-header sheet-dice-header sheet-dice-header" "sheet-dice-base sheet-dice-skill sheet-dice-gear" "sheet-dice-artifact sheet-dice-artifact sheet-dice-artifact" "sheet-dice-rolls sheet-dice-rolls sheet-dice-rolls" "sheet-dice-preset sheet-dice-preset sheet-dice-preset" "sheet-dice-footer sheet-dice-footer sheet-dice-footer";  
 }
 
-.sheet-dice_pool-box1 {
-  grid-row-start: 1;
-  grid-column: 1/4;
+.sheet-dice-base {
+  display: grid;
+  justify-self: center;
+  text-align: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3em 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "sheet-dice-base-header sheet-dice-base-header" "sheet-dice-base-col1 sheet-dice-base-col2" "sheet-dice-base-col1 sheet-dice-base-col2" "sheet-dice-base-col1 sheet-dice-base-col2" "sheet-dice-base-col1 sheet-dice-base-col2" "sheet-dice-base-col1 sheet-dice-base-col2" "sheet-dice-base-col1 sheet-dice-base-col2" "sheet-dice-base-col1 sheet-dice-base-col2";
+  grid-area: sheet-dice-base;
+}
+
+.sheet-dice-base-header {
+  grid-area: sheet-dice-base-header;
+}
+
+.sheet-dice-base-col2 {
+  display: flex;
+  flex-direction: column;
+  grid-area: sheet-dice-base-col2; 
+}
+
+.sheet-dice-base-col1 {
+  display: flex;
+  flex-direction: column;
+  grid-area: sheet-dice-base-col1;
+}
+
+.sheet-dice-skill {
+  display: grid;
+  justify-self: center;
+  text-align: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3em 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "sheet-dice-skill-header sheet-dice-skill-header" "sheet-dice-skill-col1 sheet-dice-skill-col2" "sheet-dice-skill-col1 sheet-dice-skill-col2" "sheet-dice-skill-col1 sheet-dice-skill-col2" "sheet-dice-skill-col1 sheet-dice-skill-col2" "sheet-dice-skill-col1 sheet-dice-skill-col2" "sheet-dice-skill-col1 sheet-dice-skill-col2" "sheet-dice-skill-col1 sheet-dice-skill-col2";
+  grid-area: sheet-dice-skill;
+}
+
+.sheet-dice-skill-header {
+  grid-area: sheet-dice-skill-header; 
+}
+
+.sheet-dice-skill-col2 {
+  grid-area: sheet-dice-skill-col2;
+  display: flex;
+  flex-direction: column;
+}
+
+.sheet-dice-skill-col1 {
+  display: flex;
+  flex-direction: column;
+  grid-area: sheet-dice-skill-col1;
+}
+
+.sheet-dice-gear {
+  display: grid;
+  justify-self: center;
+  text-align: center;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 3em 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-areas: "sheet-dice-gear-header sheet-dice-gear-header" "sheet-dice-gear-col1 sheet-dice-gear-col2" "sheet-dice-gear-col1 sheet-dice-gear-col2" "sheet-dice-gear-col1 sheet-dice-gear-col2" "sheet-dice-gear-col1 sheet-dice-gear-col2" "sheet-dice-gear-col1 sheet-dice-gear-col2" "sheet-dice-gear-col1 sheet-dice-gear-col2" "sheet-dice-gear-col1 sheet-dice-gear-col2";
+  grid-area: sheet-dice-gear;
+}
+
+.sheet-dice-gear-header {
+  grid-area: sheet-dice-gear-header; 
+}
+
+.sheet-dice-gear-col2 {
+  display: flex;
+  flex-direction: column;
+  grid-area: sheet-dice-gear-col2; 
+}
+
+.sheet-dice-gear-col1 {
+  display: flex;
+  flex-direction: column; 
+  grid-area: sheet-dice-gear-col1;
+}
+
+.sheet-dice-artifact {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: .75fr 1fr;
+  grid-template-areas: "sheet-dice-artifact-header sheet-dice-artifact-header sheet-dice-artifact-header sheet-dice-artifact-header" "sheet-dice-artifact-rolls sheet-dice-artifact-rolls sheet-dice-artifact-rolls sheet-dice-artifact-rolls";
+  grid-area: sheet-dice-artifact;
+  margin-top: -8px;
+}
+
+.sheet-dice-artifact-header {
+  text-align: center;
+  grid-area: sheet-dice-artifact-header;
+}
+
+.sheet-dice-artifact-rolls {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-evenly;
+    grid-area: sheet-dice-artifact-rolls;
+}
+
+.sheet-dice-rolls {
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "sheet-dice-rolls-roll sheet-dice-rolls-push sheet-dice-rolls-d66";
+  grid-area: sheet-dice-rolls;
+  margin-top: 10px;
+}
+
+.sheet-dice-rolls-roll {
+  grid-area: sheet-dice-rolls-roll; 
+}
+
+.sheet-dice-rolls-push {
+  grid-area: sheet-dice-rolls-push; 
+}
+
+.sheet-dice-rolls-d66 {
+  grid-area: sheet-dice-rolls-d66; 
+}
+
+.sheet-dice-preset {
+  display: grid;
+  text-align: center;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: "sheet-dice-preset-header" "sheet-dice-preset-preset";
+  grid-area: sheet-dice-preset;
+  margin-top: 10px;
+}
+.sheet-dice-preset-header {
+  grid-area: sheet-dice-preset-header; 
+}
+
+.sheet-dice-preset-preset {
+  grid-area: sheet-dice-preset-preset; 
+}
+
+.sheet-dice-footer {
+  display: grid;
+  grid-template-columns: 10em auto 5em;
+  grid-template-rows: 2.5em;
+  grid-template-areas: "sheet-dice-footer-clear . sheet-dice-footer-api";
+  grid-area: sheet-dice-footer;
+  margin: 16px 0 0px 0;
+}
+
+.sheet-dice-footer-clear {
+  grid-area: sheet-dice-footer-clear; 
+}
+.sheet-dice-footer-api {
+  grid-area: sheet-dice-footer-api;
+  margin: 0 0 2px 5px;
 }
 
 /* ---------------------------------- Talents */
@@ -1923,13 +2075,20 @@ button[type="action"] > span {
 }
 
 input.sheet-dice-selection {
-    width: 70px;
-    height: 18px;
+    width: 25px;
+    height: 25px;
     position: relative;
-    margin: 1px 1px 1px 1px;
+    margin: -10px 0px 2px 3px;
     cursor: pointer;
     z-index: 1;
     opacity: 0;
+}
+
+input.sheet-mighty,
+input.sheet-epic,
+input.sheet-legendary {
+  margin: 0 -25% 0 0;
+  width: 15%;
 }
 
 input.sheet-dice-selection + span::before {
@@ -1940,11 +2099,17 @@ input.sheet-dice-selection + span::before {
     text-align: center;
     display: inline-block;
     background: buttonface;
-    width: 70px;
-    height: 18px;
+    width: 28px;
+    height: 22px;
     box-shadow: 2px 2px 2px #000;
     vertical-align: middle;
-    margin: 3px 3px 3px -70px;
+    margin: -44px 2px 5px 0px;
+    padding: 5px 0 0 0;
+}
+
+.sheet-dice-artifact-rolls input.sheet-dice-selection + span::before {
+  margin: 0;
+  width: 40px;
 }
 
 input.sheet-dice-selection:hover + span::before {
@@ -2004,6 +2169,7 @@ button[type="action"]:focus span {
   border-style: outset;
   border-color: buttonface;
   border-image: initial;
+  padding: 0;
 }
 
 .sheet-dice_pool-grid button[type="action"]:focus span {
@@ -2021,6 +2187,8 @@ input[type="checkbox"].sheet-mighty:checked + span::before,
 input[type="checkbox"].sheet-epic:checked + span::before,
 input[type="checkbox"].sheet-legendary:checked + span::before {
   border: 2px dotted white;
+  padding: 3px 0px 0 0px;
+  font-size: 95%; 
 }
 
 /* ROLL TEMPLATE STYLING */
