[5th Edition OGL] Commas

--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -1814,7 +1814,7 @@ span.sheet-spellconcentration
     margin: 15px 0;
 }
 
-.sheet-spell .sheet-details span {
+.sheet-spell .sheet-details span:not(.sheet-innate){
     display: inline;
     font-weight: normal;
 }
@@ -1839,6 +1839,10 @@ span.sheet-spellconcentration
     display: inline;
 }
 
+.sheet-spell .sheet-details input[type="checkbox"]:checked ~ input[type="checkbox"]:checked + span::before {
+    content: ', ';
+}
+
 .sheet-spell .sheet-details span[name="attr_spellname"] {
     font-family: "Times New Roman", Times, serif;
     font-size: 16px;
@@ -1847,22 +1851,9 @@ span.sheet-spellconcentration
     color: rgb(126, 45, 64);
 }
 
-.sheet-spell .sheet-details span[name="attr_innate"] {
-    font-family: "Times New Roman", Times, serif;
-    font-size: 16px;
-    color: #A0A0A0;
-}
-
-.sheet-spell .sheet-details input[name="attr_spellcomp_materials"] {
+.sheet-spell .sheet-details input[name="attr_spellcomp_materials"][value=""] + span,
+.sheet-spell .sheet-details input[name="attr_spellathigherlevels"][value=""] + div {
     display: none;
-}
-
-.sheet-spell .sheet-details input[name="attr_spellcomp_materials"] + span {
-    display: none;
-}
-
-.sheet-spell .sheet-details input[name="attr_spellcomp_materials"]:valid + span {
-    display: inline;
 }
 
 .sheet-spell .sheet-display {
